# codemirror-cel

./: .gitignore  .gitmodules  README.md  package.json
.github/workflows/: deploy-demo.yml
crates/celsp-wasm/: Cargo.toml
crates/celsp-wasm/src/: lib.rs
crates/celsp-wasm/src/document/: mod.rs  state.rs  text.rs
crates/celsp-wasm/src/lsp/: completion.rs  diagnostics.rs  hover.rs  mod.rs  semantic_tokens.rs
crates/celsp-wasm/src/types/: builtins.rs  function.rs  mod.rs
demo/: index.html  main.ts  serve.ts
scripts/: build-demo.ts  build.ts
src/: highlight.ts  index.ts  transport.ts  types.test.ts  types.ts  worker.ts
test/: completions.test.ts
