[package]
name = "celsp-wasm"
version = "0.1.0"
edition = "2021"
description = "CEL Language Server compiled to WebAssembly for browser use"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Versions matched from celsp's Cargo.lock
cel-core = "0.4"
lsp-types = "0.94"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
