[package]
name = "celsp-wasm"
version = "0.1.0"
edition = "2021"
description = "CEL Language Server compiled to WebAssembly for browser use"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Versions matched from celsp's Cargo.lock
cel-core = "0.4"
lsp-types = "0.94"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2"

[package.metadata.wasm-pack.profile.release]
# wasm-pack's wasm-opt invocation doesn't pass --all-features, but Rust now
# emits bulk-memory instructions by default. We disable wasm-pack's wasm-opt
# and run it manually in the build script.
wasm-opt = false

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
